--- a/index.html
+++ b/index.html
@@ -223,6 +223,18 @@ img.emoji {
 
 
 
+<h2 class="has-text-align-center">Hyvää syntymäpäivää Rakas!</h2>
+
+
+
+<p>Tämä nettisivusto on lahjani sinulle. Täällä on kuvagallerioissa yhteensä ainakin 35 kuvaa yhteisistä hetkistämme häissä ja häämatkalla.</p>
+
+
+
+<p>Jos et ole tyytyväinen kuviin tai sisältöön &#8211; ei haittaa! Voimme yhdessä muokata niitä. Ehkä jonakin päivänä voimme näyttää näitä sivuja muillekin kiinnostuneille&#8230;</p>
+
+
+
 <figure class="wp-block-pullquote"><blockquote><p>Toisille annan toiset askareet</p><p>mutta Sinulta Kultani pyydän</p><p>että Kaarisillan kanssani teet&#8230;</p><cite>Sulho</cite></blockquote></figure>
 
 
